syntax = "proto3";
package ibft.v1alpha;

option go_package = "github.com/bloxapp/ssv/ibft/types";
import "params.proto";

message Message {
  RoundState type      = 1;
  uint64 ibft_id    = 2;
  uint64 round      = 3;
  bytes lambda      = 4;
  bytes input_value = 5;
  bytes signature   = 6;
}